fix z-index issues of cards vs nav on both firefox and chrome

--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -14,6 +14,7 @@ nav {
     position: sticky;
     position: -webkit-sticky;
     top: 0px;
+    z-index: 1000;
   }
 
 .logo {
