--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -20,7 +20,6 @@
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     background-color: #525252;
     overflow: hidden;
-    z-index: -1;
 }
 
 .portfolioItem-image-container {
